--- a/encyclopedia/templates/encyclopedia/index.html
+++ b/encyclopedia/templates/encyclopedia/index.html
@@ -9,7 +9,7 @@
 
     <ul>
         {% for entry in entries %}
-            <a href="{% url 'encyclopedia:get' entry %}"><li>{{ entry }}</li></a>
+            <a href="{% url 'encyclopedia:get' entry %}"><li class="text-secondary">{{ entry }}</li></a>
         {% endfor %}
     </ul>
 
