--- a/encyclopedia/templates/encyclopedia/blog.html
+++ b/encyclopedia/templates/encyclopedia/blog.html
@@ -5,6 +5,9 @@
 {% endblock %}
 
 {% block body %}
+
     {{content|safe}}
+    <a href="{% url 'encyclopedia:edit' title %}" class="badge bg-light float-left">Edit Post</a>
+    
 
 {% endblock %}
