--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -23,7 +23,7 @@
                     <a href="{% url 'encyclopedia:new_page' %}">Create New Page</a>
                 </div>
                 <div>
-                    Random Page
+                   <a href="{% url 'encyclopedia:rand_func' %}">Random Page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
